# truecallerpy

./: pyproject.toml
src/truecallerpy/: login.py  proxy.py  search.py  secrets_provider.py  verify_otp.py
src/truecallerpy/data/: phones_list.py
