[tool.poetry]
name = "truecallerpy"
version = "1.0.3"
description = "TruecallerPy is a Python package that provides functionalities to interact with the Truecaller API. It allows you to perform login, OTP verification, and phone number search using Truecaller."
authors = []
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
httpx = "*"
phonenumbers = "*"
questionary = "*"
colorama = "*"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
truecallerpy = "truecallerpy.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"